feat: Trusted Account Model + UI
