# OpenApi.yml
@@ -684,6 +684,17 @@ components:
         rsk:
           type: string
       type: object
+    TrustedAccountRequest:
+      properties:
+        address:
+          type: string
+        btc_locking_cap:
+          type: string
+        name:
+          type: string
+        rbtc_locking_cap:
+          type: string
+      type: object
     pkg.AcceptQuoteRequest:
       properties:
         quoteHash:
@@ -715,6 +726,17 @@ components:
           type: integer
       required:
       - collateral
+      type: object
+    pkg.TrustedAccountRequest:
+      properties:
+        address:
+          type: string
+        btc_locking_cap:
+          type: string
+        name:
+          type: string
+        rbtc_locking_cap:
+          type: string
       type: object
 info:
   title: Liquidity Provider Server
@@ -792,6 +814,51 @@ paths:
         "204":
           description: ""
       summary: Management Logout
+  /management/trusted-accounts:
+    get:
+      description: ' Returns all trusted accounts in the system'
+      responses:
+        "200":
+          description: ""
+      summary: Get Trusted Accounts
+    post:
+      description: ' Updates an existing trusted account in the system'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TrustedAccountRequest'
+        required: true
+      responses:
+        "204":
+          description: ""
+      summary: Update Trusted Account
+  /management/trusted-accounts/add:
+    post:
+      description: ' Adds a new trusted account'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TrustedAccountRequest'
+        required: true
+      responses:
+        "204":
+          description: ""
+      summary: Add Trusted Account
+  /management/trusted-accounts/delete:
+    post:
+      description: ' Deletes a trusted account from the system by address'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/'
+        required: true
+      responses:
+        "204":
+          description: ""
+      summary: Delete Trusted Account
   /pegin/acceptQuote:
     post:
       description: ' Accepts Quote'
